@@ -11,6 +11,8 @@ xx/xx/2006 - 1.13.1-WIP
 	  allocation entries.  (Szaka)
 	- libntfs: add ntfs_attr_readall() which reads the entire data 
 	  from an ntfs attribute.  (Szaka)
+	- libntfs: add ntfs_index_root_get() which reads the index root of 
+	  an attribute.  (Szaka)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
